# spbu-architecture-course

./: .gitignore  README.md
.github/workflows/: python-linter.yml  python-tests.yml
doc/assets/: uml-class-diagram-raw.vpd
homework-2/pybash/: pyproject.toml
homework-2/pybash/pybash/: executor.py  query_parser.py
pybash/: pyproject.toml
pybash/pybash/: cli.py  command.py  command_executor.py  custom_exceptions.py  environment.py  executor.py  lexical_parser.py  parser.out  parser.py  query_parser.py  substitution_processor.py
pybash/pybash/commands/: __init__.py  assign_command.py  base_command.py  cat_command.py  cd_command.py  command_streams.py  echo_command.py  exit_command.py  external_command.py  grep_command.py  ls_command.py  pwd_command.py  wc_command.py
pybash/pybash/parsers/: lexical_parser.py  parser.out  parsetab.py  semantic_parser.py
pybash/tests/: query_parser_spec.py  test_command.py  test_environment.py  test_parser.py  test_substitution_processor.py
pybash/tests/commands/: conftest.py  test_assign_command.py  test_cat_command.py  test_cd_command.py  test_echo_command.py  test_exit_command.py  test_external_command.py  test_grep_command.py  test_ls_command.py  test_pwd_command.py  test_wc_command.py
pybash/tests/parsers/: test_lexical_parser.py  test_semantic_parser.py
pybash/tests/test_command/: conftest.py  test_cat.py  test_echo.py
review/: Review.md
