[tool.poetry]
name = "pybash"
version = "0.1.0"
description = ""
authors = ["yaroslav2k <yaroslav.k@gcodexoptimus.pro>", "Nickkreker <nick_berezikov@me.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
expects = "^0.9.0"
Faker = "^14.2.0"
ply = "^3.11"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
